# libscidae

./: meson.build  meson_options.txt
demo/: demo.c  meson.build
libscidae/: meson.build  scidae.h  scidaecanvas.c  scidaecanvas.h  scidaecontext.c  scidaecontext.h  scidaeutil-private.h  scidaeutil.c  scidaeutil.h
libscidae/data/: meson.build  scidaedata.h  scidaedataid.c  scidaedataid.h  scidaerevision.c  scidaerevision.h  scidaerevisiondelete.c  scidaerevisiondelete.h  scidaerevisioninsert.c  scidaerevisioninsert.h  scidaewordnode.c  scidaewordnode.h
libscidae/docs/: libscidae.toml.in  meson.build  scidae_urlmap.js
libscidae/pango/: scidaepangocontext.c  scidaepangocontext.h  scidaepangotext.c  scidaepangotext.h
libscidae/widget/: scidaecontainer.c  scidaecontainer.h  scidaeparagraph.c  scidaeparagraph.h  scidaetext.c  scidaetext.h  scidaetoplevel.c  scidaetoplevel.h  scidaewidget-alt.h  scidaewidget-private.h  scidaewidget.c  scidaewidget.h
subprojects/: libgrapheme.wrap  pango2.wrap
subprojects/packagefiles/: libgrapheme-meson-support.patch  pango2-avoid-pedantic.patch  pango2-fix-harfbuzz.patch
